*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -1,5 +1,7 @@
 '''პუბლიუს ვალერიუს ვოლუსი პოპლიკოლა''' (P. Valerius Volusi f. Publicola) (* ? ―   †   [[ძვ. წ. 503]]), [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] და [[ძვ. წ. 504]] წლებში. 
 
+==მეფის დამხობა და ბრუტუსის კონსულობა==
+
 პუბლიუს ვალერიუსი ითვლება სწორედ იმ ვალერიუსის ჩამომავლად, რომელმაც შეარიგა [[რომულუსი]] და ტატიუსი და ორი ერის გაერთიანებას ხელი შეუწყო {{სქოლიო|1|რომ}}.
 
 ჯერ კიდევ [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] განდევნამდე პუბლუს ვალერიუსმა თავისი სიკეთით, გულისხმიერებით და უხვობით გაითქვა სახელი. იგი მდიდარი ადამიანი იყო და ყველა გაჭირვებულს ეხმარებოდა. ყველა მოელოდა რომ მეფის დამხობის შემდეგ იგი ერთერთი ყველაზე გავლენიანი ადანიანი გახდებოდა ახლად დაარსებულ [[რომის რესპუბლიკა|რესპუბლიკაში]]. მაგრამ, მიუხედავად იმისა რომ მეფის დამხობაში აქტიურ მონაწილეობას იღებდა, პირველ საკონსულო არჩევნებზე გაიმარჯვეს [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსმა]] და ტარკვინიუს კოლატინუსმა.
@@ -8,15 +10,21 @@
 
 როდესაც რომში ტარკვინიუსის ელჩები ჩამოვიდნენ და სცადეს რესპუბლიკელების წინააღმდეგ შეთქმულების მოწყობა{{სქოლიო|2|ბრუტ}}, პოპლიკოლამ მოღალატეთა მხილებაში აქტიური მონაწილეობა მიიღო. ამ მოვლენებმა მას რომაელი ხალხის სიყვარული და ნდობა მოუტანა. ტარკვინიუს კოლატინუსის{{სქოლიო|3|კოლატინუსი}} გადადგომის და განდევნის შემდეგ კი იგი ბრუტუსთან ერთად მეორე კონსული გახდა.
 
+==პირველი კონსულობა==
+
 ტარკვინიუსმა კი, რადგან შეთქმულებით ვერაფერს ვერ მიაღწია, დაარწმუნა ეტრუსკები გამოსულიყვნენ რომაელების წინააღმდეგ. ბრძლაში დაიღუპა ბრუტუსიც და ტარკვინიუსის ვაჟი ატუნტუსიც. ისინი ბრძოლის დაწყების თანავე ეძგერნენ ერთმანეთს და შუბებით განგმირეს ერთმანეთი. ბრძოლა ძალიან სასტიკი იყო, მაგრამ რომაელებმა გაიმარჯვეს. პოპლიკოლა კი ტრიუმფით დაბრუნდა რომში.
 
 მალე კი პოპლიკოლას პოპულარობა ისევ უნდობლობით შეიცვალა. ამბობდნენ თითქოს კონსულს გამეფება უნდა, რომ იგი ტარკვინიუსზე უფრო მდიდარ სახლში ცხოვრობს ველიას ბორცვზე. როდესაც მან გაიგო თუ რას ამბობდა მასზე ხალხო, დაიქირავა მუშები და ერთ ღამეში დაანგრევინა სახლი თვითონ კი მეგობრებთან გადასახლდა. მოგვიანებით რომაელებმა მას უბოძეს მიწის ნაკვეთი სადაც აუშენეს სახლი{{სქოლიო|4|სახლი}}.
+
+==კანონები==
 
 ხალხის გულის მოსაგებად და დემოკრატიის გასაძლიერებლად მან [[ლიქტორები|ლიქტორების]] [[ფასცები|ფასცებიდან]] ბრძანა ამოეღოთ ნაჯახები და სახალხო კრებებზე უნდა დაეშვათ. ამან გაამართლა და კონსულის პოპულარობა კვლავ გაიზარდა, თან მას პოპლიკოლა შეარქვეს ([[ლათინური ენა|ლათ.]] poplicola - ხალხის მეგობარი).
 
 პოპლიკოლამ შეავსო სენატის შემადგენლობა, შემდეგ შემოიტანა კანონი, რომლის მიხედვითან ხალხს ჰქონდა უფლება მაგისტრების და კონსულის გადაწყვეტილებების გასაჩივრება. მან ასევე დააკანონა იმათი სიკვდილით დასჯა, ვინც ეცდება ძალით მოიპოვოს ხელისუფლება. მან ასევე გაანთავისუფლა ღარიბები ნალოგებისგან, კონსულის არ დამორჩილება ისჯებოდა ჯარიმით 5 ძროხა და 2 ცხვარი. იმ დროს რომაელებში ფული ჯერ არ იყო ფართოთ გავრცელებული და ქონება საქონლის რაოდენობით იზომებოდა. ხოლო თუ ვინმე მოისურვებდა სამეფო ძალაუფლებას იგი და მისი ქონება იწყევლებოდა.
 
 პოპლიკოლას არ სურდა თვითონ ემართა ფინანსური საკითხები და პასუხი ეგებინა სახელმწიფო ხაზინაზე, ამიტომ მან დააწესა რომ ხაზინა [[სატურნი (ღმერთი)|სატურნის]] ტაძარში ყოფილიყო, ხოლო მისი მმართველობა არჩევით კვესტორებს ევალებოდათ. ამ ღონისძიებების ჩატარების შემდეგ მან კონსულის არჩევნები მოაწყო სადაც ლუკრეციუსმა გაიმარჯვა, მაგრამ ეს უკანასკნელი რამოდენიმე დღეში მოკვდა და არჩევნები ხელმეორედ ჩატარდა და მარკუს ჰორაციუსმა გაიმარჯვა.
+
+==მეორე კონსულობა და ეტრუსკებთან ომი==
 
 [[ძვ. წ. 508]] წელს პოპლიკოლა კიდევ ერთხელ აირჩიეს კონსულად, და მასთან ერთად ტიტუს ლუკრეციუსი. ტარკვინიუსი კი იმ ბრძოლის შემდეგ, სადაც მან ვაჟი დაკარგა, მივიდა ლარსუს პორსენუსთან და დახმარება სთხოვა. პორსენუსის ჯარი რომს მიადგა. მათ მალე დაიკავეს ტიბროსის მარჯვენა ნაპირვე გამაგრებული ბორცვი იანიკულუსი. მდინარის პირზე გაიმართა გაცხარებული ბრძოლა, სადაც ორივე კონსული მძიმედ დაიჭრა. ამის გამო რომაელები მორალურად დაეცნენ და უკან დაიხიეს. მტრების ჯარი ტიბროსზე ხიდს მოადგა, როლის შემდეგაც იწყებოდა რომი, მაგრამ ჰორაციუს კოკლესმა{{სქოლიო|5|კოკლესი}}, გერმანიუსმა და ლარციუსმა შეაჩერეს მტერი, სანამ დანარჩენმა ჯარისკაცებმა მოასწრეს ხიდის დანგრევა. კოკლესის გმირობით აღფრთოვანებულმა პოპლიკომან ბრძანა გამოეწოთ მისთვის იმდენი მიწა, რამდენის მოხვნასაც იგი ერთ დღეში შეძლებდა და ყველა რომაელს მოუწოდა ქონების ნაწილი მიეცათ მისთვის, ხოლო მოგვიანებით მას ქანდაკება დაუდგეს.
 
