--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -34,6 +34,8 @@
 
 ==საბინელებთან ომი==
 
+[[ძვ. წ. 505]] წელს როდესაც კონსული პოპლიკოლას ძმა მარკუსი იყო, რომის მიწებს საბინელები შემოესივნენ.
+
 ----
 * {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
 * {{სქოლიო2|ბრუტ}} - ამის შესახებ დაწვრილებით [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსის]] ბიოგრაფიაში იხილეთ.
