--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -32,9 +32,9 @@
 
 რომაელების გულადობით აღფრთოვანებულმა პორსენუსმა დაიწყო პოპლიკოლასთან სამშვიდობო მოლაპარკება. რომაელებმა ეტრუსკებს მძევლად 10 ლატრიციუსი და 10 ქალი გადასცეს, მათ შორის პოპლიკოლას ქალიშვილი ვალერია. მალე ეტრუსკებმა დატოვეს თავისი ბანაკი და რაც კი ჰონება იყო იქ, რომაელებს დაუტოვეს.
 
-==საბინელებთან ომი==
+==საბინელებთან ომი და მეოთხე კონსულობა==
 
-[[ძვ. წ. 505]] წელს როდესაც კონსული პოპლიკოლას ძმა მარკუსი იყო, რომის მიწებს საბინელები შემოესივნენ.
+[[ძვ. წ. 505]] წელს როდესაც კონსული პოპლიკოლას ძმა მარკუსი იყო, რომის მიწებს საბინელები შემოესივნენ. მარკუსმა ისინი ორივე ბრძოლაში ბრწყინვალეთ დაამარცხა, რისთვისაც ხალხმა მადლობის ნიშნად პალატინზე სახლი აუგო. [[ძვ. წ. 504]] წელს პოპლიკოლა კიდევ ერთხელ აირჩიეს კონსულად. საბინელებმა და ლათინებმა განიძრახეს რომთან ახალი ომის დაწყება.
 
 ----
 * {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
