/* ძვ. წ. VI საუკუნე */

--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -4,17 +4,17 @@
 
 * [[ძვ. წ. 509|509]] ('''245''' A.V.C.{{სქოლიო|1|avc}}) - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
 
-* [[ძვ. წ. 509|509]] ('''245''' A.V.C.) - [[პოპლიკოლა|პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა]], სპ. ლუკრეციუს ტრიციპიტინუსი, მარკუს ჰორაციუს პულნუსი.
+* [[ძვ. წ. 509|509]] ('''245''' A.V.C.) - [[პოპლიკოლა|პ. ვალერიუს ვოლუსი ფ. პოპლიკოლა]], სპ. ლუკრეციუს ტრიციპიტინუსი, მარკუს ჰორაციუს პულნუსი.
 
-*[[ძვ. წ. 508|508]] ('''246''' A.V.C.) - პ. ლუკრეციუს ტიტუს ფ. ტრიციპიტინუსი, პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა
+*[[ძვ. წ. 508|508]] ('''246''' A.V.C.) - პ. ლუკრეციუს ტიტუს ფ. ტრიციპიტინუსი, [[პოპლიკოლა|პ. ვალერიუს ვოლუსი ფ. პოპლიკოლა]]
 
-*[[ძვ. წ. 507|507]] ('''247''' A.V.C.) - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა III, მარკუს ჰორაციუს პულნუს II
+*[[ძვ. წ. 507|507]] ('''247''' A.V.C.) - [[პოპლიკოლა|პ. ვალერიუს ვოლუსი ფ. პოპლიკოლა]] III, მარკუს ჰორაციუს პულნუს II
 
 *[[ძვ. წ. 506|506]] ('''248''' A.V.C.) - სპ. ლარციუს რუსფუსი (ფლავიუსი), ტიტუს ჰერმინიუს აკილინუსი
 
 *[[ძვ. წ. 505|505]] ('''249''' A.V.C.) - მარკუს ვალერიუს ვოლუსი (ვოლუსუსი?), პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი
 
-*[[ძვ. წ. 504|504]] ('''250''' A.V.C.) - პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა IV, ტიტუს ლუკრეციუს ტრიციპიტინუს II
+*[[ძვ. წ. 504|504]] ('''250''' A.V.C.) - [[პოპლიკოლა|პ. ვალერიუს ვოლუსი ფ. პოპლიკოლა IV]], ტიტუს ლუკრეციუს ტრიციპიტინუს II
 
 *[[ძვ. წ. 503|503]] ('''251''' A.V.C.) - მემენიუს აგრიპა ც.ფ. ლანატუსი, პუბლუის პოსტუმიკოს ქ.ფ. ტიბერიუსი II
 
