/* საბინელებთან ომი და მეოთხე კონსულობა */

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -36,6 +36,8 @@
 
 [[ძვ. წ. 505]] წელს როდესაც კონსული პოპლიკოლას ძმა მარკუსი იყო, რომის მიწებს საბინელები შემოესივნენ. მარკუსმა ისინი ორივე ბრძოლაში ბრწყინვალეთ დაამარცხა, რისთვისაც ხალხმა მადლობის ნიშნად პალატინზე სახლი აუგო. [[ძვ. წ. 504]] წელს პოპლიკოლა კიდევ ერთხელ აირჩიეს კონსულად. საბინელებმა და ლათინებმა განიძრახეს რომთან ახალი ომის დაწყება.
 
+==რესურსები ინტერნეტში==
+
 ----
 * {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
 * {{სქოლიო2|ბრუტ}} - ამის შესახებ დაწვრილებით [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსის]] ბიოგრაფიაში იხილეთ.
