/* საბინელებთან ომი და მეოთხე კონსულობა */

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -34,7 +34,7 @@
 
 ==საბინელებთან ომი და მეოთხე კონსულობა==
 
-[[ძვ. წ. 505]] წელს როდესაც კონსული პოპლიკოლას ძმა მარკუსი იყო, რომის მიწებს საბინელები შემოესივნენ. მარკუსმა ისინი ორივე ბრძოლაში ბრწყინვალეთ დაამარცხა, რისთვისაც ხალხმა მადლობის ნიშნად პალატინზე სახლი აუგო. [[ძვ. წ. 504]] წელს პოპლიკოლა კიდევ ერთხელ აირჩიეს კონსულად. საბინელებმა და ლათინებმა განიძრახეს რომთან ახალი ომის დაწყება.
+[[ძვ. წ. 505]] წელს როდესაც კონსული პოპლიკოლას ძმა მარკუსი იყო, რომის მიწებს საბინელები შემოესივნენ. მარკუსმა ისინი ორივე ბრძოლაში ბრწყინვალეთ დაამარცხა, რისთვისაც ხალხმა მადლობის ნიშნად პალატინზე სახლი აუგო. [[ძვ. წ. 504]] წელს პოპლიკოლა კიდევ ერთხელ აირჩიეს კონსულად. საბინელებმა და ლათინებმა განიძრახეს რომთან ახალი ომის დაწყება, მაგრამ საბინელებს შორის სერიოზული უთანხმოება დაიწყო, ვინმე აპიუს კლავზუსი, მდიდარი და გავლენიანი ადამიანი, არწმუნებდა თანამემამულეებს რომთან ომის უსარგებლობაში. მის წინააღმდეგ დიდი მოძრაობა დაიწყო, რამაც საბინელებს ომის დაწყებაში ხელი შეუშალა. პოპლიკოლამ იცოდა ამ ამბის შესახებ და გაუგზავნა კლავზუსს წერილი, რომლითაც მას რომში გადმოსახლება ურჩია. კლავზუსმა ყველაფერი კარგად აწონდაწონა და თავის მეგობრებთან და მომხრეებთან ერთად რომში წავიდა. აქ პოპლიკოლა მათ გარგად შეხვდა, ჩამოსული საბინელები რომის მოქალაქეებად მიიღეს და მიწები დაურიგეს, კლავზუსი კი სენატორი გახდა. ითვლება რომ იგი კლავდიუსების წინაპარი იყო.
 
 ==რესურსები ინტერნეტში==
 
