--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -38,6 +38,9 @@
 
 ==რესურსები ინტერნეტში==
 
+* [http://www.ancientrome.ru/antlitr/plutarch/sgo/poplicola-f.htm პლუტარქე "პარალელური ბიოგრაფიები", პოპლიკოლას ცხოვრება]]
+* [http://www.ancientrome.ru/antlitr/livi/kn02-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან"]
+
 ----
 * {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
 * {{სქოლიო2|ბრუტ}} - ამის შესახებ დაწვრილებით [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსის]] ბიოგრაფიაში იხილეთ.
