*Empty MediaWiki Message*

--- a/პიოტრ_I_(რუსეთი).mw
+++ b/პიოტრ_I_(რუსეთი).mw
@@ -2,7 +2,7 @@
 '''პიოტრ I''' დიდი (''[[რუსული ენა|რუს.]]:'' Пётр I Великий; საკუთარ თავს ეძახდა გერმანულად '''პეტერ''' - Пeтeрь)  (* [[9 ივნისი]] [[1672]], [[მოსკოვი]]; † [[8 თებერვალი]] [[1725]], [[სანკტ-პეტერბურგი]]) - [[რუსეთი|რუსეთის]] [[რუსეთის ცარების სია|ცარი]] [[1682]]-[[1721]] და [[რუსეთის იმპერატორების სია|იმპერატორი]] [[1721]]-[[1725]] წლებში.
 
 
-==ბავშვობა და სიყმაწვილე== hello says I
+==ბავშვობა და სიყმაწვილე== 
 პიოტრი დაიბადა [[1672]] წელს [[კრემლი (მოსკოვი)|კრემლში]]. იგი რუსეთის ცარის [[ალეკსეი I (რუსეთი)|ალეკსეი მოხაილოვიჩის]]  მე-12 შვილი იყო. დედამისი [[ნარიშკინა, ნატალია კირილოვნა|ნატალია ნარიშკინა]] ალეკსეის მეორე ცოლი იყო. მამისა და უფროსი ძმის, ცარ [[ფედორ III (რუსეთი)|ფედორ III]]-ის სიკვდილის შემდეგ პატარა პიოტრი ძალაუფლებისთვის მებრძოლ ბოიართა ორი დაჯგუფების ბრძოლის ცენტრში აღმოჩნდა. ერთის მხრივ [[მილოსლავსკი|მილოსლავსკები]] - ცარ ალეკსეის პირველი ცოლის სანათესაო და მეორეს მხრივ [[ნარიშკინი|ნარიშკინები]] - პიოტრის დედის ნატალიას გვარეულობა სამეფო ტახტზე თავიანთი კანდიდატის დასმისათვის იბრძოდნენ.
 
 [[1682]] წელს ცარ ფედორის დასაფლავების შემდგომ [[ბოიარი|ბოიარების]] [[დუმა|დუმამ]] პატრიარქ იოაკიმის დასტურით პიოტრი ცარად გამოაცხადა. თუმცა მალე მოსკოვში მილოსლავსკებისა და პიოტრის უფროსი დის ცარევნა [[რომანოვა, სოფია ალეკსეევნა|სოფიას]] მიერ პროვოცირებული [[სტრელეცი|სტრელეცების]] ბუნტი დაიწყო, რომელსაც ნარიშკინების საგვარეულოს მრავალი წარმომადგენელი ემსხვერპლა. საბოლოოდ ორივე ძმა, პიოტრი და [[ივან V (რუსეთი)|ივანი]] ერთდროულად იქნენ ტახტზე დასმული. ივანი მართალია "უფროს" ცარად ითვლებოდა, მაგრამ სინამდვილეში მთელი ძალაუფლება ხელში აიღო სოფიამ, რომელმაც თავი რეგენტად გამოაცხადა და სამეფო საქმეებს სრულიად ჩამოაშორა ნატალია ნარიშკინა. სოფიას მმართველობის დროს პიოტრი დედასთან ერთად მოსკოვის მიმდებარე სოფლებში - კოლომენსკოესა და პრეობრაჟენსკოეში ცხოვრობდა.
