/* საბინელებთან ომი და მეოთხე კონსულობა */

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -36,6 +36,12 @@
 
 [[ძვ. წ. 505]] წელს როდესაც კონსული პოპლიკოლას ძმა მარკუსი იყო, რომის მიწებს საბინელები შემოესივნენ. მარკუსმა ისინი ორივე ბრძოლაში ბრწყინვალეთ დაამარცხა, რისთვისაც ხალხმა მადლობის ნიშნად პალატინზე სახლი აუგო. [[ძვ. წ. 504]] წელს პოპლიკოლა კიდევ ერთხელ აირჩიეს კონსულად. საბინელებმა და ლათინებმა განიძრახეს რომთან ახალი ომის დაწყება, მაგრამ საბინელებს შორის სერიოზული უთანხმოება დაიწყო, ვინმე აპიუს კლავზუსი, მდიდარი და გავლენიანი ადამიანი, არწმუნებდა თანამემამულეებს რომთან ომის უსარგებლობაში. მის წინააღმდეგ დიდი მოძრაობა დაიწყო, რამაც საბინელებს ომის დაწყებაში ხელი შეუშალა. პოპლიკოლამ იცოდა ამ ამბის შესახებ და გაუგზავნა კლავზუსს წერილი, რომლითაც მას რომში გადმოსახლება ურჩია. კლავზუსმა ყველაფერი კარგად აწონდაწონა და თავის მეგობრებთან და მომხრეებთან ერთად რომში წავიდა. აქ პოპლიკოლა მათ გარგად შეხვდა, ჩამოსული საბინელები რომის მოქალაქეებად მიიღეს და მიწები დაურიგეს, კლავზუსი კი სენატორი გახდა. ითვლება რომ იგი კლავდიუსების წინაპარი იყო.
 
+ამის შემდეგ საბინელებმა გამოილაშქრეს რომზე. მათ განიძრახეს ჩაესაფრებინათ ფეხოსნები რომთან ახლოს და მხედრების მეშვეობით გამოეტყუებინათ რომის ჯარი და შემდეგ დასხმოდნენ თავს, მაგრამ პოპლიკოლამ გაიგო ამის შესახებ და ზომები მიიღო. მისმა სიძემ პოსტუმიუს ალბუსმა, თვითონ ჩაუსაფრდა ჩასაფრებულ საბინელებს, მეორე კონსული ლუკრეციუსი მხედრებს უნდა დასხომდა თავს, ხოლო პოპლიკოლა კი მტრის ბანაკს უნდა დასხმოდა.
+
+დილას, როდესაც ბრძოლა შედგა ნისლი ჩამოწვა რომაელებმა გეგმის მიხედვით დაიწყეს ბრძოლა. საბინელები მალე აიშალნენ და გაიქცნენ. არავინ არ ცდილობდა პოზიციების შენარჩუნებას, რადგან ეგონათ რომ სხვა რაზმები იგებენ ბრძოლას. ამგვარად საბინელებმა ძლიერი მარცხი განიცადეს. რომაელებმა კი ბევრნი ჩაიგდეს ტყვეთ და დიდი ნადავლიც მიიღეს. პოპლიკოლამ მეორე ტრიუმფი გადაიხადა.
+
+შემდეგ [[ძვ. წ. 503]] წელს მან აღარ წარმოადგინა საკუთარი კანდიდატურა კონსულების არჩევნებზე და მალევე მოკვდა. იგი დიდი პატივით დაკრძალეს, ხოლო რომაელი ქალები მთელი მომდევნო წელი მის საპატივცემლოდ ძაძებს ატარებდნენ.
+
 ==რესურსები ინტერნეტში==
 
 * [http://www.ancientrome.ru/antlitr/plutarch/sgo/poplicola-f.htm პლუტარქე "პარალელური ბიოგრაფიები", პოპლიკოლას ცხოვრება]]
