--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -36,6 +36,8 @@
 
 ბრძოლა ძალიან სასტიკი იყო, მაგრამ რომაელებმა მაინც გაიმარჯვეს. ეს მოხდა რომის დაარსებიდან 245 წელს მარტის კანენდების წინა დღეს.{{სქოლიო|1|თარიღი}}
 
+რომში იგი დიდი პატივით დაკრძალეს, რომაელი ქალები მას როგორც ოჯახის მამას ისე დასტიროდნენ და ძაზებს ატარებდნენ.
+
 ==რესურსები ინტერნეტში==
 
 * [http://ancientrome.ru/antlitr/plutarch/sgo/poplicola-f.htm პლუტარქე "პარალელური ბიოგრაფიები", პოპლიკოლას ცხოვრების აღწერა]
