--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -39,6 +39,9 @@
 
 ლუციუს ტარკვინუს ამაყმა იმება 25 წელი. რომში მეფობა 240 წელი იყო, დაარსებიდან რესპუბლიკის ჩამოყალიბებამდე.
 
+==ცხოვრება დამხობის შემდეგ==
+
+
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
