/* ცხოვრება დამხობის შემდეგ */

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -41,6 +41,9 @@
 
 ==ცხოვრება დამხობის შემდეგ==
 
+როგორც ვთქვით მან და მისმა ვაჟებმა თავი ეტრუსკებს შეაფარეს. მალე მათ რომში გაგზავნეს ელჩები რათა მიეღოთ იქ დარჩენილი ქონება და რესპუბლიკელების წინააღმდეგ შეთქმულება მოეწყოთ. შეთქმულების შესახელ კონსულად არჩეულმა ბრუტუსმა გაიგო და მიუხედავათ იმისა რომ შეთქმულთა შორის მისი ორი ვაჟი იყო, ყველა სიკვდილით დასაჯა, ხოლო ყოფილი მეფის ქონება ხალხს გააძარცვინა.
+
+რადგან ვერაგობით ტარკვინიუსი ვერაფერს გახდა მან ეტრუსკებს სთხოვა რომზე გალაშქრება, რათა დაებრუნებინა ტახტი. ეტრუსკები დათანხვდნენ. ბრძოლაში დაიღუპა ტარკვინიუსის ვაჟი
 
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
