/* ცხოვრება დამხობის შემდეგ */

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -43,7 +43,9 @@
 
 როგორც ვთქვით მან და მისმა ვაჟებმა თავი ეტრუსკებს შეაფარეს. მალე მათ რომში გაგზავნეს ელჩები რათა მიეღოთ იქ დარჩენილი ქონება და რესპუბლიკელების წინააღმდეგ შეთქმულება მოეწყოთ. შეთქმულების შესახელ კონსულად არჩეულმა ბრუტუსმა გაიგო და მიუხედავათ იმისა რომ შეთქმულთა შორის მისი ორი ვაჟი იყო, ყველა სიკვდილით დასაჯა, ხოლო ყოფილი მეფის ქონება ხალხს გააძარცვინა.
 
-რადგან ვერაგობით ტარკვინიუსი ვერაფერს გახდა მან ეტრუსკებს სთხოვა რომზე გალაშქრება, რათა დაებრუნებინა ტახტი. ეტრუსკები დათანხვდნენ. ბრძოლაში დაიღუპა ტარკვინიუსის ვაჟი
+რადგან ვერაგობით ტარკვინიუსი ვერაფერს გახდა მან ეტრუსკებს სთხოვა რომზე გალაშქრება, რათა დაებრუნებინა ტახტი. ეტრუსკები დათანხვდნენ. ბრძოლაში დაიღუპა ტარკვინიუსის ვაჟი ატუნტუსი. მიუხედავად იმისა რომ რომაელებმა ბრუტუსი დაკარგეს, მათ მაინც მოიგეს ბრძოლა.
+
+ამის შემდეგ ტარკვინიუსმა მიმართა პორსენუსს. ეს უკანასკნელი [[ძვ. წ. 508]] წელს რომს მიადგა დიდძალი ჯარით და პირველ ბრძოლაში კინაღამ აიღო ქალაქი. შემდეგ ალყა შემოარტყა. რომაელებმა შეძლეს პორსენუსის დარწმუნება რომ ტარკვინიუსი დამსახურებულად გააგდეს და ბოლოს დაიდო სამშვიდობო ხელშეკრულება. ტარკვინიუსმა ამ ომითაც ვერაფერს ვერ მიაღწია.
 
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
