/* ცხოვრება დამხობის შემდეგ */

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -47,6 +47,10 @@
 
 ამის შემდეგ ტარკვინიუსმა მიმართა პორსენუსს. ეს უკანასკნელი [[ძვ. წ. 508]] წელს რომს მიადგა დიდძალი ჯარით და პირველ ბრძოლაში კინაღამ აიღო ქალაქი. შემდეგ ალყა შემოარტყა. რომაელებმა შეძლეს პორსენუსის დარწმუნება რომ ტარკვინიუსი დამსახურებულად გააგდეს და ბოლოს დაიდო სამშვიდობო ხელშეკრულება. ტარკვინიუსმა ამ ომითაც ვერაფერს ვერ მიაღწია.
 
+[[ძვ. წ. 506]] წელს პორსენუსისგან რომში ელჩები ჩამოვიდნენ რათა კიდევ ერთხელ ეთხოვათ მეფის დაბრუნება, რომაელებმა მათ პირდაპირი პასუხი არ გასცეს, მხოლოდ ის უთრეს რომ უკვე გააგზავნეს სენატორები მოსალაპარაკებლად. ასე იმიტომ მოიქცნენ, რომ არ სურდათ ელჩებისთვის პირდაპირი უარის თქმით შეურაცხყოფა მიეყენებინათ პორსენუსისთვის. სენატორები მართლაც გაგზავნეს. სენატორები ჩავიდნენ პორსენუსთან და დელეკატურად აუხსნეს რომ რომაელი ერი ამიერიდან თავისუფალია და მეფეს უკან არავითარ შემთხვევაში არ მიიღებს. ამის მოსმენის შემდეგ პორსენუსმა უარი უთხრა ტარკვინიუსებს შემდგომ დახმარებაზე.
+
+ამის შემდეგ ტარკვინიუსი ქალაქ ტუსკულუსში გადაეხვეწა თავის სიძესთან ოქტავიანე მამლუსთან.
+
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
 
