/* ცხოვრება დამხობის შემდეგ */

--- a/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
+++ b/ლუციუს_სუპერბუს_ტარკვინიუსი.mw
@@ -49,7 +49,9 @@
 
 [[ძვ. წ. 506]] წელს პორსენუსისგან რომში ელჩები ჩამოვიდნენ რათა კიდევ ერთხელ ეთხოვათ მეფის დაბრუნება, რომაელებმა მათ პირდაპირი პასუხი არ გასცეს, მხოლოდ ის უთრეს რომ უკვე გააგზავნეს სენატორები მოსალაპარაკებლად. ასე იმიტომ მოიქცნენ, რომ არ სურდათ ელჩებისთვის პირდაპირი უარის თქმით შეურაცხყოფა მიეყენებინათ პორსენუსისთვის. სენატორები მართლაც გაგზავნეს. სენატორები ჩავიდნენ პორსენუსთან და დელეკატურად აუხსნეს რომ რომაელი ერი ამიერიდან თავისუფალია და მეფეს უკან არავითარ შემთხვევაში არ მიიღებს. ამის მოსმენის შემდეგ პორსენუსმა უარი უთხრა ტარკვინიუსებს შემდგომ დახმარებაზე.
 
-ამის შემდეგ ტარკვინიუსი ქალაქ ტუსკულუსში გადაეხვეწა თავის სიძესთან ოქტავიანე მამლუსთან. [ძვ. წ. 499]] წელს დაიწყო ომი რომაელებსა და ლათინური ქალაქების გაეთიანებას შორის. პირველი ბრძოლის წინ რომაელებმა გაიგეს რომ ტარკვინიუსიც იღებდა ამ ბრძოლაში მონაწილეობას და განსაკუთრებული სიცხარით იბრძოდნენ. ტარკვინიუსი ბეჭში დაჭრეს და გაიყვანეს ბრძოლის ველიდან. ტარკვინიუსის ვაჟი ტიტუსი რომიდან განდევნილების რაზმს ედგა სათავეში. ცოტა ხნით ბრძოლაში მათ უპირატესობა მოიპოვეს, როდესაც სხვა ლათინური რაზმები მარცხდებოდნენ. [[პოპლიკოლა|პოპლიკოლას]] ძმამ მარკუსმა დაინახა ტიტუსი და მოისურვა მისი მოკვლა, მაგრამ იგი უფრო ადრე მოკლეს ლათინებმა.
+ამის შემდეგ ტარკვინიუსი ქალაქ ტუსკულუსში გადაეხვეწა თავის სიძესთან ოქტავიანე მამლუსთან. [ძვ. წ. 499]] წელს დაიწყო ომი რომაელებსა და ლათინური ქალაქების გაეთიანებას შორის. პირველი ბრძოლის წინ რომაელებმა გაიგეს რომ ტარკვინიუსიც იღებდა ამ ბრძოლაში მონაწილეობას და განსაკუთრებული სიცხარით იბრძოდნენ. ტარკვინიუსი ბეჭში დაჭრეს და გაიყვანეს ბრძოლის ველიდან. ტარკვინიუსის ვაჟი ტიტუსი რომიდან განდევნილების რაზმს ედგა სათავეში. ცოტა ხნით ბრძოლაში მათ უპირატესობა მოიპოვეს, როდესაც სხვა ლათინური რაზმები მარცხდებოდნენ. [[პოპლიკოლა|პოპლიკოლას]] ძმამ მარკუსმა დაინახა ტიტუსი და მოისურვა მისი მოკვლა, მაგრამ იგი უფრო ადრე მოკლეს ლათინებმა. რომაელებმა საბოლოოთ დაამარცხეს ლათინები და დაიკავეს მათი ბანაკი.
+
+[[ძვ. წ. 495]] წელს ტარკვინიუსი მოკვდა ქალაქ კუმში.
 
 ==რესურსები ინტერნეტში==
 [http://www.ancientrome.ru/antlitr/livi/kn01-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან]
