*Empty MediaWiki Message*

--- a/კონსული.mw
+++ b/კონსული.mw
@@ -1,1 +1,1 @@
-'''კონსული''' (''[[ლათინური ენა|ლათ]]. '''consules''''')
+'''კონსული''' (''[[ლათინური ენა|ლათ]]. '''consules''''') [[რომის რესპუბლიკა|რომის რესპუბლიკაში]] ერთერთი უმაღლესი [[მაგისტრატურა]].
