*Empty MediaWiki Message*

--- a/კონსული.mw
+++ b/კონსული.mw
@@ -1,1 +1,7 @@
 '''კონსული''' (''[[ლათინური ენა|ლათ]]. '''consules''''') [[რომის რესპუბლიკა|რომის რესპუბლიკაში]] ერთერთი უმაღლესი [[მაგისტრატურა]].
+
+{{რომის მთავრობა}}
+კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
