*Empty MediaWiki Message*

--- a/კონსული.mw
+++ b/კონსული.mw
@@ -1,7 +1,9 @@
 '''კონსული''' (''[[ლათინური ენა|ლათ]]. '''consules''''') [[რომის რესპუბლიკა|რომის რესპუბლიკაში]] ერთერთი უმაღლესი [[მაგისტრატურა]].
 
 {{რომის მთავრობა}}
-კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა
+ლათინურად კონსული ნიშნავს "ვინც ერთად ლაპარაკობს.
+
+კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა ცენტურიების [[კომიცია|კომიციაზე]] ერთი წლის ვადით.
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
