--- a/კონსული.mw
+++ b/კონსული.mw
@@ -3,7 +3,7 @@
 {{რომის მთავრობა}}
 ლათინურად კონსული ნიშნავს "ვინც ერთად ლაპარაკობს.
 
-კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა ცენტურიების [[კომიცია|კომიციაზე]] ერთი წლის ვადით.
+კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა ცენტურიების [[კომიცია|კომიციაზე]]. კონსულების ხელისუფლება ემყარებოდა ორ მთავარ პრინციპს [[კოლეგიალობა|კოლეგიალობას]] და მოკლევადიანობას. ანუ ერთდროულად ირჩეოდფა ორი კონსული თითო წლის ვადით. თუ კი კონსული მოკვდებოდა მაშინ ტარდებოდა ხელახალი არჩევნები და მის ადგილზე ირჩევდნენ ახალ კონსულს.
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
