*Empty MediaWiki Message*

--- a/კონსული.mw
+++ b/კონსული.mw
@@ -5,5 +5,7 @@
 
 კონსულების ინსტიტუტი რომში ჩამოყალიბდა მეფე [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] დამხობის შემდეგ. [[ძვ. წ. 509]] წელს აირჩიეს პირველი კონსულები. კონსულის არჩევა ხდებოდა ცენტურიების [[კომიცია|კომიციაზე]]. კონსულების ხელისუფლება ემყარებოდა ორ მთავარ პრინციპს [[კოლეგიალობა|კოლეგიალობას]] და მოკლევადიანობას. ანუ ერთდროულად ირჩეოდფა ორი კონსული თითო წლის ვადით. თუ კი კონსული მოკვდებოდა მაშინ ტარდებოდა ხელახალი არჩევნები და მის ადგილზე ირჩევდნენ ახალ კონსულს.
 
+{{ესკიზი}}
+
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის სახელმწიფო ინსტიტუტები]]
