/* ამ დღეს გარდაცვლილნი */

--- a/15_მარტი.mw
+++ b/15_მარტი.mw
@@ -21,7 +21,7 @@
 
 ==ამ დღეს გარდაცვლილნი==
 
-*[[-44]] : [[იულიუს კეისარი]] - რომაელი სახელმწიფო მოღვაწე (დ.[[-100]])
+*[[ძვ. წ. 44]] : [[იულიუს კეისარი]] - რომაელი სახელმწიფო მოღვაწე (დ.[[ძვ. წ. 100]])
 *[[1945]] : [[იტიკავა სიოიტი]] - იაპონიის მუშათა მოძრაობის მოღვაწე (დ.[[1892]])
 *[[1959]] : [[დადიანი, შალვა]] - ქართველი მწერალი, დრამატურგი.
 *[[1975]] : [[ონასისი, არისტოტელ]] - ბერძენი მილიარდერი (დ.[[1906]])
