--- a/ოსამა_ბინ_ლადენი.mw
+++ b/ოსამა_ბინ_ლადენი.mw
@@ -9,7 +9,7 @@
 
 იგი არის მამამისის მუხამედ ბენ ლადენის მე-17 შვილი.
 
-ბ
+ოსამა 16 წლის იყო, როცა ის ისლამის ერთ–ერთ ფუნდამენტალურ დაჯგუფებაში შევიდა. შემდეგ მან სწავლა განაგრძო აბდულ აზიზის სახელობის უნივერსიტეტში. დიპლომის აღების შემდეგ ოსამა წავიდა ავღანეთის ომში.
 
 ==რესურსები ინტერნეტში==
 [http://binladen.150m.com/ ოსამა ბინ ლადენი]
