*Empty MediaWiki Message*

--- a/აქსიომა.mw
+++ b/აქსიომა.mw
@@ -1,1 +1,44 @@
-დებულება–მიჩნეული ჭეშმარიტებად დამტკიცების გარეშე
+'''აქსიომა''' (''[[ბერძნული ენა|ბერძ.]]''tà tôn progónon axiómata = აღიარებული დებულება), დებულება, რომლის ჭეშმარიტება თავისთავად ცხადია, უეჭველია და დასაბუთება არ სჭირდება. [[ტერმინი]] "აქსიომა" [[არისტოტელე|არისტოტელეს]] მიეწერება. მის დროს ეს ტერმინი მეცნიერებიდან სასაუბრო ენაშიც შევიდა, როგორც ''თავისთავად ცხადი დებულების'' [[სინონიმი]].
+
+დედუქციურ მეცნიერებაში აქსიომას დისციპლინის საწყის დებულებას უწოდებენ.  სიცხადისა და სიმარტივის გამო ამ დისციპლინაში იგი მართებულობის დაუმტკიცებლად ჭეშმარიტადაა მიჩნეული.
+
+{{ესკიზი}}
+
+
+
+[[be:Аксіёма]]
+[[bg:Аксиома]]
+[[ca:Axioma]]
+[[cs:Axiom]]
+[[da:Aksiom]]
+[[de:Axiom]]
+[[en:Axiom]]
+[[eo:Aksiomo]]
+[[es:Axioma]]
+[[et:Aksioom]]
+[[fa:اصل موضوع]]
+[[fi:Aksiooma]]
+[[fr:Axiome]]
+[[he:אקסיומה]]
+[[hr:Aksiom]]
+[[hu:Axióma]]
+[[id:Aksioma]]
+[[io:Axiomo]]
+[[it:Assioma (matematica)]]
+[[ja:公理]]
+[[ko:공리]]
+[[lt:Aksioma]]
+[[nl:Axioma]]
+[[no:Aksiom]]
+[[pl:Aksjomat]]
+[[pt:Axioma]]
+[[ro:Axiomă]]
+[[ru:Аксиома]]
+[[simple:Axiom]]
+[[sl:Aksiom]]
+[[sr:Аксиома]]
+[[sv:Axiom]]
+[[tr:Aksiyom]]
+[[uk:Аксіома]]
+[[vi:Tiên đề]]
+[[zh:公理]]
