*Empty MediaWiki Message*

--- a/თბილისი.mw
+++ b/თბილისი.mw
@@ -81,6 +81,7 @@
 * [[მაქსიმ გორკი]], სამჭოთა მწერალი, სოციალისტური რეალიზმის დამფუძნებელი
 * [[მელუა, ქეთი]], მომღერალი
 * [[მერკულოვი, ვსევოლოდ]], ენ-კა-გე-ბე'ს ყოფილი მეთაური
+* [[ნათელაშვილი, შალვა]], პოლიტიკოსი, ამჟამინდელი ოპოზიციური ლიდერი
 * [[პატარკაციშვილი, ბადრი]], ბიზნესმენი, მეწარმე, ფილანტროპი
 * [[პეტროსიანი, ტიგრან]], ყოფილი მსოფლიო ჭადრაკის ჩემპიონი
 * [[პრიმაკოვი, ევგენი]], რუსი პოლიტიკოსი
