*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ჩ.mw
+++ b/ცნობილი_ქართველები:_ჩ.mw
@@ -150,7 +150,7 @@
 * [[ჩხეიძე, ოთარ]] - მწერალი
 * [[ჩხეიძე, რევაზ]] - კინორეჟისორი
 * [[ჩხეიძე, სეხნია]] - იმერეთის სამეფოს სახლთუხუცესი
-* [[ჩხეიძე, სეხნია XVIII საუკუნის I ნახევარი]] - ისტორიკოსი
+* [[ჩხეიძე, სეხნია (XVIII ს.)]] - ისტორიკოსი
 * [[ჩხეიძე, უშანგი]] - მსახიობი
 * [[ჩხენკელი, აკაკი]] - პოლიტიკური მოღვაწე
 * [[ჩხენკელი, თამაზ]] - პოეტი
