--- a/ბაგრატ_IV_(იმერეთის_მეფე).mw
+++ b/ბაგრატ_IV_(იმერეთის_მეფე).mw
@@ -2,7 +2,7 @@
 |- bgcolor=whitesmoke
 |<small>საკუთარ სახელს "'''ბაგრატ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ბაგრატ]]
 |}</small>
-'''ბაგრატ IV''' (―† [[1681]]), [[იმერეთის სამეფო|იმერეთის]] მეფე ([[1660]]-[[1661]], [[1663]]-[[1668]], [[1669]]-[[1678]], [[1679]]-[[1681]]), [[ალექსანდრე III | ალექსანდრე III-ის]] ძე. ახალგაზრდობაში დააბრმავა დედინაცვალმა [[დარეჯანი (ზურაბ არაგვის ერისთავის მეუღლე) | დედოფალმა დარეჯანმა]]. ბაგრატ IV-ის მერყევმა პოლიტიკამ ხელი შეუწყო ფეოდალურ შინაომების გაღრმავებას, გაძლიერდა იმერელ ფეოდალთა და გურია-სამეგრელოს მთავართა თვითნებობა, გახშირდა "ტყვის სყიდვა". ბაგრატ IV-ს სამჯერ ჩამოართვეს მეფობა. მეფობის პერიოდშიც მას ფაქტობრივად მხოლოდ სამეფო დომენი ემორჩილებოდა. სახლთუხუცესმა სეხნია ჩხეიძემ ქუთაისის ციხე ორჯერ ([[1666]], [[1668]]) გადასცა ოამალებს. ბაგრატ IV-მ შეძლო მისი დაბრუნება, მაგრამ [[1674]] იძულებული გახდა თვითონ გადაეცა ის ოსმალებისათვის.
+'''ბაგრატ IV''' (―† [[1681]]), [[იმერეთის სამეფო|იმერეთის]] მეფე ([[1660]]-[[1661]], [[1663]]-[[1668]], [[1669]]-[[1678]], [[1679]]-[[1681]]), [[ალექსანდრე III | ალექსანდრე III-ის]] ძე. ახალგაზრდობაში დააბრმავა დედინაცვალმა [[დარეჯანი (ზურაბ არაგვის ერისთავის მეუღლე) | დედოფალმა დარეჯანმა]]. ბაგრატ IV-ის მერყევმა პოლიტიკამ ხელი შეუწყო ფეოდალურ შინაომების გაღრმავებას, გაძლიერდა იმერელ ფეოდალთა და გურია-სამეგრელოს მთავართა თვითნებობა, გახშირდა "ტყვის სყიდვა". ბაგრატ IV-ს სამჯერ ჩამოართვეს მეფობა. მეფობის პერიოდშიც მას ფაქტობრივად მხოლოდ სამეფო დომენი ემორჩილებოდა. სახლთუხუცესმა [[ჩხეიძე, სეხნია|სეხნია ჩხეიძემ]] ქუთაისის ციხე ორჯერ ([[1666]], [[1668]]) გადასცა ოამალებს. ბაგრატ IV-მ შეძლო მისი დაბრუნება, მაგრამ [[1674]] იძულებული გახდა თვითონ გადაეცა ის ოსმალებისათვის.
 
 
 [[კატეგორია:ქართველები]]
