--- a/ბელარუსები.mw
+++ b/ბელარუსები.mw
@@ -1,5 +1,6 @@
 {{ესკიზი}}
 
+[[Image:Soviet Union-1961-Stamp-0.03. Belarusians.jpg|thumb|]]
 
 '''ბელორუსები''' (беларусы) - [[ხალხი]], ბელარუსის ძირითადი მოსახლენი (7,9 მლნ). ცხოვრობენ აგრეთვე [[რუსეთი|რუსეთის ფედერაციაში]] (1,2 მლნ), [[უკრაინა|უკრაინაში]] (440 ათ.), [[ყაზახეთი|ყაზახეთში]] (183 ათ.), [[ლატვია|ლატვიაში]] (120 ათ.), [[ლიტვა|ლიტვაში]] (63 ათ.), [[უზბეკეთი|უზბეკეთში]] (63 ათ.), [[ესტონეთი|ესტონეთში]] (27,7 ათ.), [[პოლონეთი|პოლონეთში]] (დაახლ. 300 ათ.). 
 
