*Empty MediaWiki Message*

--- a/აქსიომა.mw
+++ b/აქსიომა.mw
@@ -1,6 +1,8 @@
-'''აქსიომა''' (''[[ბერძნული ენა|ბერძ.]]''tà tôn progónon axiómata = აღიარებული დებულება), დებულება, რომლის ჭეშმარიტება თავისთავად ცხადია, უეჭველია და დასაბუთება არ სჭირდება. [[ტერმინი]] "აქსიომა" [[არისტოტელე|არისტოტელეს]] მიეწერება. მის დროს ეს ტერმინი მეცნიერებიდან სასაუბრო ენაშიც შევიდა, როგორც ''თავისთავად ცხადი დებულების'' [[სინონიმი]].
+'''აქსიომა''' (''[[ბერძნული ენა|ბერძ.]]'' tà tôn progónon axiómata = აღიარებული დებულება), დებულება, რომლის ჭეშმარიტება თავისთავად ცხადია, უეჭველია და დასაბუთება არ სჭირდება. [[ტერმინი]] "აქსიომა" [[არისტოტელე|არისტოტელეს]] მიეწერება. მის დროს ეს ტერმინი მეცნიერებიდან სასაუბრო ენაშიც შევიდა, როგორც ''თავისთავად ცხადი დებულების'' [[სინონიმი]].
 
 დედუქციურ მეცნიერებაში აქსიომას დისციპლინის საწყის დებულებას უწოდებენ.  სიცხადისა და სიმარტივის გამო ამ დისციპლინაში იგი მართებულობის დაუმტკიცებლად ჭეშმარიტადაა მიჩნეული.
+
+[[კატეგორია:ტერმინები]]
 
 {{ესკიზი}}
 
