*Empty MediaWiki Message*

--- a/აქსიომა.mw
+++ b/აქსიომა.mw
@@ -2,7 +2,7 @@
 
 დედუქციურ მეცნიერებაში აქსიომას დისციპლინის საწყის დებულებას უწოდებენ.  სიცხადისა და სიმარტივის გამო ამ დისციპლინაში იგი მართებულობის დაუმტკიცებლად ჭეშმარიტადაა მიჩნეული.
 
-[[კატეგორია:ტერმინები]]
+[[კატეგორია:ლოგიკა]]
 
 {{ესკიზი}}
 
