*Empty MediaWiki Message*

--- a/შპიგელი_(ჟურნალი).mw
+++ b/შპიგელი_(ჟურნალი).mw
@@ -9,6 +9,14 @@
 
 შპიგელი სტილითა და პრეზენტაციით ემსგავსება ამერიკულ ჟურნალებს [[ტაიმი (ჟურნალი)|ტაიმი]] და [[ნიუსუიკი]], თუმცა გაცილებით უფრო ტევადი, ღრმა-გაანალიზებული სტატიები აქვს და ამით [[ატლანტიკ-მანზლი|ატლანტიკ-მანზლის]] ან ბრიტანულ [[ეკონომისტი (ჟურნალი)|ეკონომისტს]] ჰგავს. გერმანიაში ის ცნობილია გამორჩეული, აკადემიური წერის სტილითა და უკიდურესი სიმძიმით. ტიპიური გამოცემა 200 გვერდიანია მიუხედავად იმისა, რომ ყოველკვირეულია და რეკლამას მხოლოდ მოცულობის მესამედს უთმობს.
 
+==სკანდალები==
+შპიგელს პოლიტიკური არაეთიკურობის გამოვლენისა და სკანდალების დიდი ისტორია აქვს, რითაც დაიმსახურა "Sturmgeschütz der Demokratie" (დემოკრატიის დამბაჩა) წოდება. ფაქტიურად ამ როლში შპიგელი ადრეული 1950-იანებიდან გამოდის, როცა ფედერალური მთავრობა იძულებული გახდა გამეძიებინა შპიგელის ბრალდებები ზოგიერთ პარლამენტართა მოქრთამვაზე, რამაც ხელი შეუწყო დასავლეთ გერმანიის მთავრობის [[ფრანკფურტი|ფრანკფურტის]] ნაცვლად [[ბონი|ბონში]] დაფუძნებას.
+
+თუმცა ყველაზე მნიშვნელოვანი ინციდენტი, რომელმაც ჟურნალს დემოკრატიის დიდი სკანდალისტის სახელი დაუმკვიდრა იყო ე.წ. [[შპიგელის სკანდალი]] (1962). გერმანიის სამხედრო ძალების არადამაკმაყოფილებელ საომარ მდგომარეობაზე სტატიის გამოქვეყნების შემდეგ თავდაცვის მინისტრმა მემარჯვენე ფრანც იოზეფ შტრაუსმა შპიგელის წინააღმდეგ გამოძიების დაიწყო, რის გამოც პოლიციამ ჟურნალის რედაქციის ოფისი დაარბია, ხოლო რუდოლფ აუგშტაინი სხვა რედაქტორებთან ერთად დაპატიმრებულ იქნა ღალატის ბრალდებით. მიუხედავად იმისა, რომ კანონმდებლობით ამის უფლება არ ჰქონდა, შტრაუსმა ასევე დააპატიმრებინა თავად სტატიის ავტორი კონრად აჰლერი, რომელიც იმჟამად ესპანეთში იმყოფებოდა შვებულებით. გამოძიება სწრაფად ჩავარდა არასაკმარის მტკიცებათა გამო და მთელმა კამპანიამ კანცლერი [[ადენაუერი, კონრად|კონრად ადენაუერის]] კაბინეტის მძლავრი შერყევა გამოიწვია, შტრაუსის გადადგომასთან ერთად.
+
+ეს ინციდენტი საყოველთაოდ განიხილებოდა, როგორც პრესის თავისუფლების შელახვა, ხოლო შპიგელი კი - ამ თავისუფლების ბასტიონი. მას შემდეგ შპიგელი მნიშვნელოვან როლს თამაშობს გერმანიის მთავრობაში სხვადასხვა პოლიტიკური მაქინაციებისა და ძალთა დაპირისპირებების გამოვლენაში.
+
+
 {{ესკიზი}}
 ==რესურსები ინტერნეტში==
 *[http://www.spiegel.de/ შპიგელის ვებ-გვერდი]
