*Empty MediaWiki Message*

--- a/აქსიომა.mw
+++ b/აქსიომა.mw
@@ -1,8 +1,14 @@
-'''აქსიომა''' (''[[ბერძნული ენა|ბერძ.]]'' tà tôn progónon axiómata = აღიარებული დებულება), დებულება, რომლის ჭეშმარიტება თავისთავად ცხადია, უეჭველია და დასაბუთება არ სჭირდება. [[ტერმინი]] "აქსიომა" [[არისტოტელე|არისტოტელეს]] მიეწერება. მის დროს ეს ტერმინი მეცნიერებიდან სასაუბრო ენაშიც შევიდა, როგორც ''თავისთავად ცხადი დებულების'' [[სინონიმი]].
+'''აქსიომა''' (''[[ბერძნული ენა|ბერძ.]]'' tà tôn progónon axiómata = აღიარებული დებულება), [[ეპისტემოლოგია|ეპისტემოლოგიაში]] დებულებაა, რომლის ჭეშმარიტება თავისთავად ცხადია, უეჭველია და დასაბუთება არ სჭირდება. [[ტერმინი]] "აქსიომა" [[არისტოტელე|არისტოტელეს]] მიეწერება. მის დროს ეს ტერმინი მეცნიერებიდან სასაუბრო ენაშიც შევიდა, როგორც ''თავისთავად ცხადი დებულების'' [[სინონიმი]].
 
 დედუქციურ მეცნიერებაში აქსიომას დისციპლინის საწყის დებულებას უწოდებენ.  სიცხადისა და სიმარტივის გამო ამ დისციპლინაში იგი მართებულობის დაუმტკიცებლად ჭეშმარიტადაა მიჩნეული.
 
+[[ლოგიკა|ლოგიკასა]] და [[მათემატიკა|მათემატიკაში]] აქსიომა უეჭველი სიმართლე შესაძლოა არ იყოს, არამედ უფრო ფორმალური ლოგიკური გამოხატულებაა [[დედუქცია|დედუქციური]] მტკიცებისა, რომელიც გარკვეულ შედეგს იწვევს. მათემატიკაში ანსხვავებენ ორის სახის აქსიომას: [[ლოგიკური აქსიომა|ლოგიკურ აქსიომას]] და [[არა-ლოგიკური აქსიომა|არა-ლოგიკურ აქსიომას]].
+
+
+
 [[კატეგორია:ლოგიკა]]
+[[კატეგორია:მათემატიკური აქსიომები]]
+[[კატეგორია:ტერმინები]]
 
 {{ესკიზი}}
 
