*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_წ.mw
+++ b/ცნობილი_ქართველები:_წ.mw
@@ -47,7 +47,10 @@
 * [[წივწივაძე, ილია]] - პროფესიონალი რევოლუციონერი
 * [[წითლანაძე, გიორგი]] - კურორტოლოგი
 * [[წითლანაძე, ელიზბარ]] - მათემატიკოსი
-* [[წითლიძე, მამუკა]] - პოეტი
+* [[წითლიძე, გივი]] - აგრონომ-სუბტროპიკოსი
+* [[წიკლაური, ანდრია]] - სტახანოველი მემანქანე-ინსტრუქტორი
+* [[წიკლაური, გახა]] - მთასვლელი
+* [[წიკლაური, მამუკა]] - პოეტი
 * [[წილოსანი, გივი]] - მიკრობიოლოგი
 * [[წილოსანი, ვლადიმერ]] - მხატვარ-გრაფიკოსი და ხუროთმოძღვარი
 * [[წილოსანი, ზურაბ]] - მეცნიერი საშენ მასალათა და მასალათა მექანიკის დარგში
