*Empty MediaWiki Message*

--- a/ჭყონდიდელი.mw
+++ b/ჭყონდიდელი.mw
@@ -1,10 +1,18 @@
 '''ჭყონდიდელი''', [[ჭყონდიდის საეპისკოპოსო|ჭყონდიდის]] (ახლანდელი [[მარტვილი]]) მთავარეპისკოპოსი X საუკუნიდან დღემდე (X-XIII საუკუნეებში ჭყონდიდელი ატარებდა აგრეთვე ბიზანტიურ საპატიო ტიტულებს: სვინგელოზი, პროტოუპერტიმოსი). ჭყონდიდელი იყო ოდიშის ეკლესიის მეთაური და აფხაზეთის საკათალიკოსოს დაარსებამდე (წყაროებში პირველად XIII საუკუნეში იხსენიება, ზოგიერთი მკვლევარის მოსაზრებით, აფხაზთა კათალიკოსიბა დაწესდა VIII ან X საუკუნეებში) ყველაზე გავლენიანი მღვდელთმთავარი დასავლეთ საქართველოში და შესაძლოა მას ექვემდებარებოდნენ დასავლეთ საქართველოს სხვა ეპისკოპოსებიც.
 
 
-ჭყონდიდელის დიდი გავლენის გამო [[დავით IV|დავით აღმაშენებელმა]] ([[1089]]-[[1125]]) საეკლესიო პოლიტიკის გატარებისას სწორედ მასზე შეაჩერა არჩევანი - ჭყონდიდლობა შეუთავსა [[მწიგნობართუხუცეს-ჭყონდიდელი|მწიგნობართუხუცესობას]] და ის დანიშნა თავის ვაზირად. შემდეგში დავითმა ჭყონდიდელს დაუქვემდებარა კიდევ ორი ეპარქია: [[ბედიის ეპარქია|ბედიისა]] (აფხაზეთში) და [[ალავერდის ეპარქია|ალავერდისა]] (კახეთში). XII-XIII საუკუნეებში ჭყონდიდელი ზოგჯერ ქართლის კათოლიკოსიც ხდებოდა და სხვა ეპარქიის მღვდელთმთავრობასაც ითავსებდა (მაგ., XII საუკუნის ბოლოს მიქაელ კათოლიკოსი იყო ჭყონდიდელ-მწიგნობართუხუცესი და სამთავნელი; არსენ კათოლიკოსი - ჭყონდიდელ-მწიგნობართუხუცესი). უკანასკნელად ჭყონდიდელი ვაზირად წყაროებში იხსენიება XIII საუკუნის შუა წლებში (ბასილი ჭყონდიდელ-მწიგნობართუხუცესი და უჯარმელი). არის მოსაზრება ([[ბერძენიშვილი, ნიკოლოზ|ნ. ბერძენიშვილი]]), რომ XIV საუკუნის II ნახევრის მოღვაწე გიორგი ჭყონდიდელი ვაზირი იყო. ჭყონდიდელი ვაზირობას ინარჩუნებს XV საუკუნის ბოლომდე, ე.ი. საქართველოს მონარქიის საბოლოოს დაშლამდე. ამ მოსაზრებას ისიც ადასტურებს, რომ XIV საუკუნის ქართული სამართლის ძეგლი "ჴელმწიფის კარის გარიგება" ჭყონდიდელს ჯერ კიდევ "ვაზირთა უპირველესად" იხსენიებს.
+ჭყონდიდელის დიდი გავლენის გამო [[დავით IV|დავით აღმაშენებელმა]] ([[1089]]-[[1125]]) საეკლესიო პოლიტიკის გატარებისას სწორედ მასზე შეაჩერა არჩევანი - ჭყონდიდლობა შეუთავსა [[მწიგნობართუხუცეს-ჭყონდიდელი|მწიგნობართუხუცესობას]] და ის დანიშნა თავის ვაზირად. შემდეგში დავითმა ჭყონდიდელს დაუქვემდებარა კიდევ ორი ეპარქია: [[ბედიის ეპარქია|ბედიისა]] (აფხაზეთში) და [[ალავერდის ეპარქია|ალავერდისა]] (კახეთში). XII-XIII საუკუნეებში ჭყონდიდელი ზოგჯერ ქართლის კათოლიკოსიც ხდებოდა და სხვა ეპარქიის მღვდელთმთავრობასაც ითავსებდა (მაგ., XII საუკუნის ბოლოს მიქაელ კათოლიკოსი იყო ჭყონდიდელ-მწიგნობართუხუცესი და სამთავნელი; არსენ კათოლიკოსი - ჭყონდიდელ-მწიგნობართუხუცესი). უკანასკნელად ჭყონდიდელი ვაზირად წყაროებში იხსენიება XIII საუკუნის შუა წლებში ([[ბასილი უჯარმელ-ჭყონდიდელი|ბასილი ჭყონდიდელ-მწიგნობართუხუცესი და უჯარმელი]]). არის მოსაზრება ([[ბერძენიშვილი, ნიკოლოზ|ნ. ბერძენიშვილი]]), რომ XI-XII საუკუნეებში მოღვაწე [[გიორგი ჭყონდიდელ-მწიგნობართუხუცესი|გიორგი ჭყონდიდელი]] ვაზირი იყო. ჭყონდიდელი ვაზირობას ინარჩუნებს XV საუკუნის ბოლომდე, ე.ი. საქართველოს მონარქიის საბოლოოს დაშლამდე. ამ მოსაზრებას ისიც ადასტურებს, რომ XIV საუკუნის ქართული სამართლის ძეგლი "ჴელმწიფის კარის გარიგება" ჭყონდიდელს ჯერ კიდევ "ვაზირთა უპირველესად" იხსენიებს.
+
+საქართველოს პოლიტიკური დაშლილობის ხანაში (XV-XVIII სს.) ჭყონდიდელი სამეგრელოს ხანაში ეკლესიის მეთაური იყო. ის ამ პერიოდში აქტიურ როლს ასრულებდა სამეგრელოს სამთავროსა და მთლიანად დასავლეთ საქართველოს პოლიტიკურ ცხოვრებაში. ეპარქიულად იგი აფხაზთა კათოლიკოსს ექვემდებარებოდა. სამეგრელოს მთავარი მხარდაჭერით ჭყონდიდელი ცდილობდა თავისი საეპარქიო იურისდიქციის ფარგლების გაზრდას, ხშირად იერთებდა დასავლეთ საქართველოს სხვა საეპისკოპოსოებსაც. მაგ., ჭყონდიდელი გაბრიელ ჩიქოვანი (XVII ს.) ამავე დროს იყო ბედიელ - ცაგერელი (ბედიისა და ცაგერის ეპისკოპოსი), ხოლო ანტონ ჭყონდიდელი (XVIII ს.) - იყო ცაგერელიც და სხვა. 
+
+ჭყონდიდელი დოკუმენტებში იხსენიება როგორც "სრულიად სამეგრელოს და ნაწილთა იმერეთისა მწყემსთმთავარი". სამეგრელოს მთავრის პოლიტიკური ექსპანსიას დასავლეთ საქართველოში თან სდევდა ჭყონდიდელის საეკლესიო ექსპანსიაც. 
+
+დადიანები (სამეგრელოს მთავრები) და ჭყონდიდელები შეთანხმებულად მოქმედებდნენ. ამასთან, [[დადიანები]] ხშირად ჭყონდიდელად თავიანთი საგვარეულოს წარმომადგენლებს სვამდნენ. XVIII საუკუნის დასაწყისში სამეგრელოს მთავრის ბეჟან დადიანის მხარდაჭერით ჭყონდიდელმა ევდემონ ღოღობერიძემ აფხაზთა კათოლიკოს [[გრიგოლი (ლორთქიფანიძე)|გრიგოლ ლორთქიფანიძისაგან]] მიიღო მიტროპოლიტის პატივი.
+
+ჭყონდიდელი არა მარტო ეპარქიის მღვდელთმთავარი იყო, არამედ - ჭყონდიდის საყდრის სენიორიის გამგებელიც. ჭყონდიდლები აქტიურად მონაწილეობდნენ საქართველოს პოლიტიკურ და კულტურულ ცხოვრებაში. გამოჩენილი სახელმწიფო და კულტურული მოღვაწეები იყვნენ [[სტეფანე სანანოის ძე]] (X ს.), [[გიორგი ჭყონდიდელ-მწიგნობართუხუცესი|გიორგი ჭყონდიდელი]] (XI-XII სს.), [[სვიმეონი|სვიმეონ ჭყონდიდელი და ბედიელ-ალავერდელი]] (XII ს.), [[ანტონ გნოლისთავისძე|ანტონ ჭყონდიდელი]] (XII-XIIIსს.), [[არსენ ჭყონდიდელ-მწიგნობართუხუცესი|არსენ ჭყონდიდელი]] და კათოლიკოსი (XIII ს.), [[ბასილი უჯარმელ-ჭყონდიდელი|ბასილი ჭყონდიდელი და უჯარმელი]] (XIII ს.) და სხვა.
 
 
 
 
 
-[[კატეგორია:ქართველები]]
+[[კატეგორია:საქართველოს ეკლესია]]
