*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ჯ.mw
+++ b/ცნობილი_ქართველები:_ჯ.mw
@@ -13,7 +13,7 @@
 * [[ჯავახიშვილი (პოეტი)]] - პოეტი
 * [[ჯავახიშვილი, ალექსანდრე]] - არქეოლოგი და ხელოვნებათმცოდნე
 * [[ჯავახიშვილი, ალექსანდრე ნიკოლოზის ძე]] - გეოგრაფი და ათროპოლოგი
-* [[ჯავახიშვილი გამრეკელ]] - ქართლის წარჩინებული ფეოდალი
+* [[ჯავახიშვილი, გამრეკელ]] - ქართლის წარჩინებული ფეოდალი
 * [[ჯავახიშვილი, გიორგი]] - ანთროპოლოგი
 * [[ჯავახიშვილი, დავით]] - მწერალი
 * [[ჯავახიშვილი, დიმიტრი]] - კურორტოლოგი
