--- a/ოსამა_ბინ_ლადენი.mw
+++ b/ოსამა_ბინ_ლადენი.mw
@@ -5,7 +5,7 @@
 
 ==ბიოგრაფია==
 
-მისი სრული სახელია ოსამა ბენ მუჰამედ ბენ ავად ბინ ლადენ. იგი დაიბადა 1957 წლის 28 ივლისს, ქალაქ ჯიდაში, ხოლო ბავშვობა გაატარა ისლამის სამშობლოში – ხიდაში.
+მისი სრული სახელია ოსამა ბინ მუჰამედ ბინ ავად ბინ ლადენ. იგი დაიბადა 1957 წლის 28 ივლისს, ქალაქ ჯიდაში, ხოლო ბავშვობა გაატარა ისლამის სამშობლოში – ხიდაში.
 
 იგი არის მამამისის მუხამედ ბენ ლადენის მე-17 შვილი.
 
