*Empty MediaWiki Message*

--- a/გაიუს_მარიუსი.mw
+++ b/გაიუს_მარიუსი.mw
@@ -1,1 +1,13 @@
 '''გაიუს მარიუსი''' (''[[ლათინური ენა|ლათ]].  '''C·MARIVS·C·F·C·N''''') ([[ძვ. წ. 157]] - [[ძვ. წ. 86]] [[18 იანვარი]]) [[რომის რესპუბლიკა|რომაელი]] გენერალი და შვიდგზის [[კონსული]]. იგი რომის [[მარიუსის სამხედრო რეფორმა|სამხედრო რეფორმის]] ავტორი იყო.
+
+{{ესკიზი}}
+
+{{რომის რესპუბლიკის მოღვაწეები}}
+
+
+
+[[კატეგორია:ძველი რომი]]
+[[კატეგორია:რომის კონსულები]]
+[[კატეგორია:რომის გენერლები]]
+[[კატეგორია:დაბადებული ძვ. წ. 157]]
+[[კატეგორია:გარდაცვლილი ძვ. წ. 86]]
